# quantitative-finance

./: .gitignore  README.md
advanced-time-series/: README.md
advanced-time-series/assignment/: data.csv  data.mat  data.xlsx
advanced-time-series/src/: analysis.ipynb  notebook.ipynb
implied distribution/: notebook.ipynb
portfolio-management/: .gitignore  README.md
portfolio-management/data/: F-F_Research_Data_Factors_daily.CSV
portfolio-management/src/: notebook.ipynb  output_file.xlsx
quantitative-fixed-income/: README.md
quantitative-fixed-income/Assignment/: Hand-in Assignment - Code.html
quantitative-fixed-income/src/: notebook.ipynb  simbondoption.py
quantitative-risk-management/: .gitignore  525573_497053.xlsx  README.md  main.py  pyproject.toml  requirements.txt
quantitative-risk-management/assignment/: DataGenerator.xlsm
quantitative-risk-management/src/qrmmodels/: __init__.py  exceptions.py  utils.py
quantitative-risk-management/src/qrmmodels/models/: __init__.py  var_method.py
van-lanschot-kempen/: IndexGarantieNote.py  ParticipatieNote.py  ProtectedNote.py  Simulator.py  TriggerNote.py  main2.py
